# sample_move_arm

./: CMakeLists.txt  package.xml  readme.txt
launch/: move_arm.launch
src/: move_arm.cpp
